--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+  
+      <!-- Ícono para Android/Chrome -->
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/732/732228.png" type="image/png">
+    
+    <!-- Ícono para iPhone/Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Mi App">
+    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/732/732228.png">
+  
   <style>
     * {
       box-sizing: border-box;
