--- a/index.html
+++ b/index.html
@@ -242,7 +242,10 @@
 </head>
 <body>
   <div class="page-wrapper">
-    <div class="card titulo-principal">
+    <div class="card titulo-principal" style="text-align: center;">
+      <img src="https://raw.githubusercontent.com/JoseGutierrez0109/Horas-Extras/main/1-7073475e_V1.png"
+       alt="Logo METSA"
+       style="width: 100px; margin-bottom: 20px;">
       <h1>Calculadora de Horas Extras - METSA</h1>
     </div>
 
