--- a/index.html
+++ b/index.html
@@ -241,11 +241,13 @@
   </style>
 </head>
 <body>
-  <div class="card titulo-principal" style="text-align: center;">
-      <img src="https://raw.githubusercontent.com/JoseGutierrez0109/Horas-Extras/main/1-7073475e.png"
-       alt="Logo METSA"
-       style="width: 200px; margin-bottom: 20px;">
+  <div style="text-align: center; margin-top: 30px;">
+    <img src="https://raw.githubusercontent.com/JoseGutierrez0109/Horas-Extras/main/1-7073475e.png"
+         alt="Logo METSA"
+         style="width: 250px; margin-bottom: 10px;">
+  </div>
   <div class="page-wrapper">
+    <div class="card titulo-principal">
       <h1>Calculadora de Horas Extras - METSA</h1>
     </div>
 
